--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -83,15 +83,15 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   
   <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/1h3enc.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/1h3enc.png" onclick="openModal();currentSlide(2)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/oyolz0.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/oyolz0.png" onclick="openModal();currentSlide(3)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/yocv3v.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/yocv3v.png" onclick="openModal();currentSlide(4)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/r9hrw2.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/r9hrw2.png" onclick="openModal();currentSlide(5)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/okn633.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/okn633.png" onclick="openModal();currentSlide(6)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	<p></p>
 		 <h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
@@ -160,129 +160,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	</div>
 </div>
 
- <div class="center">
 
-                <h3>The date goes as follows: [DAY/MONTH/YEAR]. The lastest artworks are at the top and the earliest are at the bottom.</h3>
-                </div>
-                <div class="row" style="position: relative; left: 30px;">
-                    <div class="column">
-                        <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/CCIINCONE.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123407.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123340.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123429.jpg" onclick="openModal();currentSlide(5)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123320.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/PresenteDaniPicapauICONE.png" onclick="openModal();currentSlide(7)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123256.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/makingfiendsFanart.png" onclick="openModal();currentSlide(9)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123233.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123204.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123131.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123059.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_123020.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/MyMeloAndKuroKissingUnderATree060525ICONE.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/Hs4kids050525ICONE.jpg" onclick="openModal();currentSlide(16)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_122956.jpg" onclick="openModal();currentSlide(17)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_122930.jpg" onclick="openModal();currentSlide(18)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_122908.jpg" onclick="openModal();currentSlide(19)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/ParaToriICON.png" onclick="openModal();currentSlide(20)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/ZoruBirthdayGiftICON.png" onclick="openModal();currentSlide(21)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250602_122816.jpg" onclick="openModal();currentSlide(22)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/paraManuICON.png" onclick="openModal();currentSlide(23)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/Para-GeovaneICON.png" onclick="openModal();currentSlide(24)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/2025ButtonICONE.png" onclick="openModal();currentSlide(25)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152628ICONE.jpg" onclick="openModal();currentSlide(26)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152605ICONE.jpg" onclick="openModal();currentSlide(27)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152539ICONE.jpg" onclick="openModal();currentSlide(28)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152517ICONE.jpg" onclick="openModal();currentSlide(29)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152456ICONE.jpg" onclick="openModal();currentSlide(30)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152444ICONE.jpg" onclick="openModal();currentSlide(31)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/sonicGijinkaICONE.png" onclick="openModal();currentSlide(32)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152355ICONE.jpg" onclick="openModal();currentSlide(33)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152336ICONE.jpg" onclick="openModal();currentSlide(34)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152306ICONE.jpg" onclick="openModal();currentSlide(35)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/PersonagemXerifeICONE.png" onclick="openModal();currentSlide(36)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152248ICONE.jpg" onclick="openModal();currentSlide(37)" class="hover-shadow" width="150px">
-                    </div>
-                    <div class="column">
-                        <img src="./Galleria/ICONES/ICONE2025/20250221_152215ICONE.jpg" onclick="openModal();currentSlide(38)" class="hover-shadow" width="150px">
-                    </div>
-                </div>
-                
-            </div>
-            
 
             <div id="myModal" class="modal">
                 <span class="close cursor" onclick="closeModal()">&times;</span>
@@ -290,37 +168,57 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/lpi14k.png" style="width: 330px; margin-left:auto; margin-right:auto; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;">[02/06/2025]</p>
+                            <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 330px; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;">[02/06/2025]</p>
+                            <img src="https://files.catbox.moe/1h3enc.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/oyolz0.png" style="width: 330px; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 330px; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;">[29/05/2025]</p>
+                            <img src="https://files.catbox.moe/yocv3v.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 330px; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;">[29/05/2025]</p>
+                            <img src="https://files.catbox.moe/r9hrw2.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="./Galleria/ARTE/Artgallery2025/KillaKillaPsychoKilla290525.jpg" style="width: 330px; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;">[29/05/2025]</p>
+                            <img src="https://files.catbox.moe/okn633.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+
+<!--DIVIDE -->
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 330px; position: relative; bottom: 70px;">
+                            <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
