--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -192,25 +192,49 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/oyolz0.png" style="width: 330px; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/yocv3v.png" style="width: 330px; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/r9hrw2.png" style="width: 330px; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/okn633.png" style="width: 330px; position: relative; bottom: 70px;">
-                            <p style="position: relative; bottom: 80px ;"></p>
+                            <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
+	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<p>
+			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p></p>
                         </div>
                     </div>
 
