--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -78,10 +78,8 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 	
 <section id="dig" class="full">
-<details style="justify:left;">
-  <summary>Publication Design</summary>
-  
-  <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
+	<H1>Please click on each image for more info!</H1>
+<img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
   <img src="https://files.catbox.moe/1h3enc.png" onclick="openModal();currentSlide(2)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
   
@@ -92,17 +90,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <img src="https://files.catbox.moe/r9hrw2.png" onclick="openModal();currentSlide(5)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
   <img src="https://files.catbox.moe/okn633.png" onclick="openModal();currentSlide(6)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
-	<p></p>
-		 <h2>Wage the War on Poverty</h2>
-	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
-	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
-	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
-		<p>
-			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
-		</p>
 
-</details>
-</section>
 	
 	
 	
