--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -155,7 +155,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                 <div class="modal-content">
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/lpi14k.png" style="width: 330px; margin-left:auto; margin-right:auto; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/lpi14k.png" style="width: 50%; margin-left:auto; margin-right:auto; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
@@ -167,7 +167,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/1h3enc.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/1h3enc.png" style="width: 50%; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
@@ -179,7 +179,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/oyolz0.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/oyolz0.png" style="width: 50%; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
@@ -191,7 +191,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/yocv3v.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/yocv3v.png" style="width: 50%; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
@@ -203,7 +203,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/r9hrw2.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/r9hrw2.png" style="width: 50%; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
@@ -215,7 +215,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                     </div>
                     <div class="mySlides">
                         <div class="center">
-                            <img src="https://files.catbox.moe/okn633.png" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="https://files.catbox.moe/okn633.png" style="width: 50%; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
@@ -229,7 +229,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 <!--DIVIDE -->
                     <div class="mySlides">
                         <div class="center">
-                            <img src="" style="width: 330px; position: relative; bottom: 70px;">
+                            <img src="" style="width: 50%; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
