--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -78,7 +78,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 	
 <section id="dig" class="full">
-	<H1>Please click on each image for more info!</H1>
+	<header>Please click on each image for more info!</header>
 <img src="https://files.catbox.moe/lpi14k.png" onclick="openModal();currentSlide(1)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
   <img src="https://files.catbox.moe/1h3enc.png" onclick="openModal();currentSlide(2)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
