--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -157,24 +157,22 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         <div class="center">
                             <img src="https://files.catbox.moe/lpi14k.png" style="width: 50%; margin-left:auto; margin-right:auto; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
-	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	 <br>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. 
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
-	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
-		<p>
+	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<br>
 			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
-		</p></p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/1h3enc.png" style="width: 50%; position: relative; bottom: 70px;">
                             <p style="position: relative; bottom: 80px ;"> <h2>Wage the War on Poverty</h2>
-	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
+	 <br>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </br>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
-	<p>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
-		<p>
+	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
+		<br>
 			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
-		</p></p>
                         </div>
                     </div>
                     <div class="mySlides">
