--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -97,8 +97,6 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 	
 <section id="dig" class="full">
-<details style="justify:left;">
-  <summary>Poster Design</summary>
   
   <img src="https://files.catbox.moe/x3rq3n.png" width="33.33%" style="object-fit:cover; float:left;">
 	
@@ -107,25 +105,13 @@ captionText.innerHTML = dots[slideIndex-1].alt;
   <img src="https://files.catbox.moe/vcreqd.png" width="33.33%" style="object-fit:cover; float:left;">
 	
   <img src="" width="33.33%" style="object-fit:cover; float:left;">
-  
-  <img src="" width="33.33%" style="object-fit:cover;  float:left;">
-	
-  <img src="" width="33.33%" style="object-fit:cover; float:left;">
 
-	
-	
-	 <h2>Vanya - 16" Bisque Doll</h2>
-	 <p>coming soon!</p>
-	 <p></p>
 
-</details>
 </section>
 	
 		
 
 <section id="dig" class="full">
-<details style="justify:left;">	
-  <summary>Branding</summary>
   
   <img src="https://files.catbox.moe/6wpk7d.png" width="33.33%" style="object-fit:cover; float:left;">
 	
@@ -151,6 +137,7 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 </div>
 
 
+<!-- WAR ON POVERTY -->
 
             <div id="myModal" class="modal">
                 <span class="close cursor" onclick="closeModal()">&times;</span>
@@ -162,8 +149,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
 	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
-		<br>
+		<p>
 			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
                         </div>
                     </div>
                     <div class="mySlides">
@@ -173,8 +161,9 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
 	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
-		<br>
+		<p>
 			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
+		</p>
                         </div>
                     </div>
                     <div class="mySlides">
@@ -205,19 +194,19 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         <div class="center">
                             <img src="https://files.catbox.moe/r9hrw2.png" style="width: 80%; position: relative; margin-left:auto; margin-right:auto;">
                             <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
-	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. 
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
 	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
 		<p>
 			On a more self-indulgent note, i <u>love</u> the accent font i used for the title and subheadings.
-		</p></p>
+		</p>
                         </div>
                     </div>
                     <div class="mySlides">
                         <div class="center">
                             <img src="https://files.catbox.moe/okn633.png" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"><h2>Wage the War on Poverty</h2>
-	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. 
+	 <p>This design was a project for my intro to communication design class, we were given a selection of stock images to choose from and the general parameters that the text must be black on white, and have two columns. </p>
 	Additionally, we were required to make a cover page and I had to find a way to satisfy both the need for a cover image and legibility of the text.
 	<br>When I first began this project I dreaded the task of having to balance content and graphics, but I think this assignment helped me learn the balance between the two.
 		<p>
@@ -226,13 +215,63 @@ captionText.innerHTML = dots[slideIndex-1].alt;
                         </div>
                     </div>
 
-<!--DIVIDE -->
+<!-- KREMA EXHIB -->
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/x3rq3n.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/j1pnr6.png" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div
                     <div class="mySlides">
                         <div class="center">
                             <img src="" style="width: 80%; position: relative;">
                             <p style="position: relative; bottom: 80px ;"></p>
                         </div>
                     </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+			
+<!-- CDP ASSIGNMENTS -->
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="https://files.catbox.moe/io9v9y.jpg" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+
+
+
+			
+<!-- KICKBACK -->
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+                    <div class="mySlides">
+                        <div class="center">
+                            <img src="" style="width: 80%; position: relative;">
+                            <p style="position: relative; bottom: 80px ;"></p>
+                        </div>
+                    </div>
+
+			
 <a class="prev" onclick="plusSlides(-1)">&#10094</a>
 <a class="next" onclick="plusSlides(1)">&#10095</a>
 
