--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -98,13 +98,13 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 	
 <section id="dig" class="full">
   
-  <img src="https://files.catbox.moe/x3rq3n.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/x3rq3n.png" onclick="openModal();currentSlide(7)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/j1pnr6.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/j1pnr6.png" onclick="openModal();currentSlide(8)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/vcreqd.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/vcreqd.png"onclick="openModal();currentSlide(9)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="" onclick="openModal();currentSlide(10)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 
 
 </section>
@@ -113,15 +113,15 @@ captionText.innerHTML = dots[slideIndex-1].alt;
 
 <section id="dig" class="full">
   
-  <img src="https://files.catbox.moe/6wpk7d.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/6wpk7d.png" onclick="openModal();currentSlide(11)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/chovay.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/chovay.png" onclick="openModal();currentSlide(12)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/io9v9y.jpg" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/io9v9y.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 	
-  <img src="https://files.catbox.moe/ue8wu0.png" width="33.33%" style="object-fit:cover; float:left;">
+  <img src="https://files.catbox.moe/ue8wu0.png" onclick="openModal();currentSlide(14)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
   
-  <img src="https://files.catbox.moe/tynxvh.png" width="33.33%" style="object-fit:cover;  float:left;">
+  <img src="https://files.catbox.moe/tynxvh.png" onclick="openModal();currentSlide(15)" class="hover-shadow" width="200px" style="object-fit:cover; float:left;">
 <p></p>
 	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR0nj8XT6Cs5YfnFi7_2OdAuyBB8dFZ8lQtlV167hunn2tvsFCyPKti9nlf9ESVoP07Q2e82aoTctRd/pubembed?start=true&loop=false&delayms=15000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	
